--- a/client_side_only_impl/index.html
+++ b/client_side_only_impl/index.html
@@ -18,7 +18,7 @@
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'none'; script-src 'self' 'unsafe-eval' https://www.google.com/js/maia.js; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://www.google.com/css/maia.css; font-src https://fonts.gstatic.com;">
 <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
 <title>
-  VSAQ - Security Assessment Questionnaires
+  BTAQ - Betterplace Technical Assessment Questionaires
 </title>
 <link href="https://www.google.com/css/maia.css" rel="stylesheet" />
 <link href="static/vsaq.css" rel="stylesheet" />
@@ -26,9 +26,9 @@
 <div class="maia-header" id="maia-header" role="banner">
   <div class="maia-aux">
     <h1>
-      <a href="/">VSAQ</a>
+      <a href="/">BTAQ</a>
     </h1>
-    <h2>Vendor Security Assessment Questionnaires</h2>
+    <h2>Betterplace Technical Assessment Questionaires</h2>
   </div>
 </div>
 
@@ -44,19 +44,39 @@
     <div class="maia-cols">
       <div class="maia-col-12">
         <div class="main-content">
-          <h2>It works!</h2>
+          <h2>Technische Frageb&ouml;gen</h2>
           <p>
-            Congratulations, you have successfully launched your own instance
-            of VSAQ!
+            Diese Frageb&ouml;gen sollen dabei helfen
+            <ul>
+              <li>Bei technischen Projekten die richtigen Entscheidungen zu treffen.</li>
+              <li>Technische Dienstleister zu beurteilen, mit denen wir arbeiten wollen.</li>
+            </ul>
           </p>
           <p>
-            At Google, questionnaires like the ones below are used to
-            assess the security programs of third parties. The templates
-            provided can be used for a variety of purposes, including doing a
-            self-assessment of your own security program, or simply becoming
-            familiar with issues affecting the security of web applications.
+            Diese Seite, und einige der Frageb&ouml;gen basieren auf den
+            <b>Vendor Security Assessment Questionaires</b> von Google.
           </p>
-          <p>The questionnaires cover the following topics:</p>
+          <h2>Warum auf Englisch?</h2>
+          <p>
+            Die Fragebögen sind auf Englisch, weil sie von den englischen Originalen
+            &uuml;bernommen wurden und mit diesen abgeglichen werden. Ausserdem arbeiten
+            wir oft mit Dienstleistern im Ausland, die diese Frageb&ouml;gen auch nutzen.
+            Neue Frageb&ouml;gen f&uuml; interne Prozesse werden ggf. auf deutsch
+            erstellt.
+          </p>
+          <h2>Wie benutze ich die Frageb&ouml;gen</h2>
+          <p>
+            <ul>
+              <li>Rufe den jeweiligen Fragebogen auf</li>
+              <li>Beantworte die Fragen</li>
+              <li>Klicke auf "Download Answers"</li>
+              <li>Speichere die Seite, die dann erscheint als Datei (Speicher unter... aus dem Me&uuml;) </li>
+              <li>Um einen Fragebogen fortzusetzen, w&auml;hle "Load Answers from
+                file" ganz oben am Fragebogen, und lade die Datei aus dem vorherigen
+                Schritt</li>
+            </ul>
+          </p>
+          <h2>Aktuelle Frageb&oouml;gen</h2>
           <ul>
             <li><a href="/vsaq.html?qpath=questionnaires/webapp.json">Web Application Security Questionnaire</a>
             <li><a href="/vsaq.html?qpath=questionnaires/security_privacy_programs.json">Security &amp; Privacy Program Questionnaire</a>
@@ -64,7 +84,7 @@
             <li><a href="/vsaq.html?qpath=questionnaires/physical_and_datacenter.json">Physical &amp; Datacenter Security Questionnaire</a>
           </ul>
           <p>If you have feedback or questions, or you stumbled upon a bug in
-          the application, reach out to us on <a href="https://github.com/google/vsaq"
+          the application, reach out to us on <a href="https://github.com/betterplace/vsaq"
           target="_blank">Github</a>.</p>
         </div>
       </div>
