--- a/client_side_only_impl/vsaq.html
+++ b/client_side_only_impl/vsaq.html
@@ -18,7 +18,7 @@
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'none'; script-src 'self' 'unsafe-eval' https://www.google.com/js/maia.js; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://www.google.com/css/maia.css; font-src https://fonts.gstatic.com;">
 <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
 <title>
-  Betterplace Technical Assessment Questionnaire
+  betterplace.org Vendor Security Assessment Questionnaire
 </title>
 <link href="https://www.google.com/css/maia.css" rel="stylesheet" />
 <link href="static/vsaq.css" rel="stylesheet" />
@@ -26,9 +26,9 @@
 <div class="maia-header" id="maia-header" role="banner">
   <div class="maia-aux">
     <h1>
-      <a href="/">BTAQ</a>
+      <a href="/">VSAQ</a>
     </h1>
-    <h2>Betterplace Technical Assessment Questionnaires</h2>
+    <h2>Vendor Security Assessment Questionnaires for betterplace.org</h2>
   </div>
 </div>
 
