Ask for web app updates

--- a/client_side_only_impl/index.html
+++ b/client_side_only_impl/index.html
@@ -76,7 +76,7 @@
                 Schritt</li>
             </ul>
           </p>
-          <h2>Aktuelle Frageb&oouml;gen</h2>
+          <h2>Aktuelle Frageb&ouml;gen</h2>
           <ul>
             <li><a href="vsaq.html?qpath=questionnaires/webapp.json">Web Application Security Questionnaire</a>
             <li><a href="vsaq.html?qpath=questionnaires/security_privacy_programs.json">Security &amp; Privacy Program Questionnaire</a>
